another deploy attempt

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,6 @@
 /* Home backround */
 .backround-home {
-  background: url(../images/sitting.jpg);
+  /* background: url(../images/sitting.jpg); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
